--- a/Servicios/Remedio-casero-para-destapar-tuberias.html
+++ b/Servicios/Remedio-casero-para-destapar-tuberias.html
@@ -130,27 +130,27 @@ Remedio casero para destapar tuberias
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
+       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-Urgencias.html">Destapaciones Urgencias </a> 
+       <a href="../Destapa-Cañerias/Alcohol-boricado-para-que-sirve.html">Alcohol boricado para que sirve </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
+       <a href="../Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html">Destapa cañerias zona sur burzaco </a> 
+       <a href="../Destapa-Cañerias/Maquina-Para-Destapar-Caños.html">Maquina Para Destapar Caños </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-ensenada.html">Destapaciones de cañerias ensenada </a> 
+       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
          </li>
 <!--EndPostsList-->
 
@@ -213,57 +213,57 @@ Remedio casero para destapar tuberias
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
+       <a href="../Servicios/Relieve-de-la-zona-norte-grande-de-chile.html">Relieve de la zona norte grande de chile </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-viejas.html">Remedios caseros para destapar cañerias viejas </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañerias.html">Destapar Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De.html">Destapaciones De </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
+       <a href="../Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Sonda-destapacaños-pretul.html">Sonda destapacaños pretul </a> 
+       <a href="../Servicios/Que-son-los-mapas-estelares.html">Que son los mapas estelares </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="../Destapa-Cañerias/Camara-De-Desague-Tapada.html">Camara De Desague Tapada </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-aguas-negras.html">Como destapar cañerias de aguas negras </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html">Destapa cañerias zona sur burzaco </a> 
+       <a href="../Servicios/Proceso-de-la-planta-para-niños.html">Proceso de la planta para niños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-baño-sin-bicarbonato.html">Como destapar un baño sin bicarbonato </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañeria.html">Destapaciones De Cañeria </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Cable-destapa-cañerias-precio.html">Cable destapa cañerias precio </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
