--- a/privacy.html
+++ b/privacy.html
@@ -238,57 +238,57 @@ body {
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
+       <a href="./Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Destapacañerias-ayudin-opiniones.html">Destapacañerias ayudin opiniones </a> 
+       <a href="./Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Liquido-destapa-cañerias-casero.html">Liquido destapa cañerias casero </a> 
+       <a href="./Servicios/Destapaciones-De-Cañerias-en-Palermo.html">Destapaciones De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
+       <a href="./Destapa-Cañerias/Sonda-destapacaños-pretul.html">Sonda destapacaños pretul </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Metodo-casero-para-destapar-cañerias.html">Metodo casero para destapar cañerias </a> 
+       <a href="./Destapa-Cañerias/Como-destapar-el-bantilde;o-con-bicarbonato.html">Como destapar el baño con bicarbonato </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Camara-De-Desague-Tapada.html">Camara De Desague Tapada </a> 
+       <a href="./Servicios/Destapar-Cañerias-en-Palermo.html">Destapar Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Bomba-para-destapar-inodoros.html">Bomba para destapar inodoros </a> 
+       <a href="./Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
+       <a href="./Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html">Mejor Destapador De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Alcohol-boricado-a-saturacion.html">Alcohol boricado a saturacion </a> 
+       <a href="./Servicios/La-ville-de-boulogne-sur-mer.html">La ville de boulogne sur mer </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapar-Cañerias-Con-Grasa-en-Palermo.html">Destapar Cañerias Con Grasa en Palermo </a> 
+       <a href="./Destapa-Cañerias/Todo-Destapaciones.html">Todo Destapaciones </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
+       <a href="./Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
